Implement item adding to list

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My shopping list</h1>
-
-    <div>
-      <label for="item">Enter a new item:</label>
-      <input type="text" name="item" id="item">
-      <button>Add item</button>
-      <div class="list"></div>
+    <h1 class="header">My shopping list</h1>
+    <div class="middle">
+      <div class="center">
+        <label for="item">Enter a new item:</label>
+        <input type="text" name="item" id="item" class="input-text">
+        <button class="create">Add item</button>
+        <div class="list"></div>
+      </div>
+  
     </div>
 
     <ul>
