Implement list element deletion

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <h1 class="header">My shopping list</h1>
-    <div class="middle">
-      <div class="center">
+    <div class="center">
+      <div class="middle">
         <label for="item">Enter a new item:</label>
         <input type="text" name="item" id="item" class="input-text">
         <button class="create">Add item</button>
-        <div class="list"></div>
+        <ul class="list"></ul>
       </div>
   
     </div>
