--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/js.js" defer></script>
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Shopping List</title>
 </head>
 <body>
     <h1 class="header">My shopping list</h1>
